# HASHI

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.enterprise  INSTALL.md  MANIFEST.in  README.md  __main__.py  agents.json.sample  build_win.ps1  cli.js  fix_usb_path.bat  hashi.py  hashi_launcher.py  instances.json  main.py  onboard-cli.js  package.json  postinstall.js  prepare_usb.bat  pyproject.toml  requirements.txt  secrets.json.sample  setup.py  tui.py  tui_onboarding.py
adapters/: base.py  claude_cli.py  claw_cli.py  codex_cli.py  deepseek_api.py  gemini_cli.py  grok_cli.py  hashi_xai_oauth.py  ollama_api.py  openrouter_api.py  registry.py  stream_events.py  xai_api.py  xai_imagine.py  xai_oauth_credentials.py
agent_seeds/: arale.md  baymax.md  doraemon.md  samantha.md  tom_nook.md  xiao_yao.md  yoda.md  zelda.md
apps/: __init__.py  voice_whatsapp_desktop_runtime.py
browser_gateway/: __init__.py  __main__.py  audit.py  main.py  server.py  service_control.py  store.py
deploy/: audit-export-presets.env.example  docker-compose.enterprise.yml  enterprise.env.example
docs/: ADAPTER_GUIDE.md  AGENT_FYI.md  ANATTA_MIGRATION_PLAN.md  API_GUIDE.md  AUDIT_AGENT_MODE_PLAN.md  AUDIT_VIBE_CODING_SUPERLOOP.md  BRIDGE_AGENT_HANDOFF.md  BROWSER_BRIDGE_HOVER_NOTE.md  CLAW_ACTUAL_REASONING_CAPTURE_PLAN.md  CLAW_BACKEND_CONTRACT.md  CLAW_CODE_MODULE_PLAN.md  CLAW_TOOL_GATEWAY_TELEMETRY_PLAN.md  DEBUGGING.md  DECISION_FRAMEWORK.md  DUAL_BRAIN_STRUCTURE_PLAN.md  Delivery_routing_fix_plan.md  ETE_DEPLOYMENT_PLAN.md  FLORENCE2_VISION_PIPELINE_SPEC.md  HANDLER_GUIDE.md  (+94 more)
(+1398 files in other folders)
